add img da hastag com css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <main>
         <div class="card">
             <div class="card-header">
-                <img src="" id="image">
+                <div class="img-container">
+                    <div class="img-hastag">
+                    <span class="line-v"></span>
+                    <span class="line-h"></span>
+                    </div>
+                </div>
                 <h1 id="card-title">#developer</h1>
             </div>
             <div class="card-footer">
